# AI_Drawings_Reader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  ENHANCEMENTS_SUMMARY.md  QUICK_START.md  README.md  app.py  install.bat  install.sh  package.json  pdf_analyzer_legacy.py  pyproject.toml  requirements.txt  test_output.jsonl
.github/workflows/: test.yml
legacy/: README.md
scripts/: convert_to_toon.mjs
src/ai_drawing_analyzer/: cli.py  gui.py
src/ai_drawing_analyzer/clients/: anthropic.py  base.py  factory.py  gemini.py  huggingface.py  openai.py
src/ai_drawing_analyzer/converters/: __init__.py  dwg_converter.py  ifc_converter.py  jsonl_to_text.py  toon_converter.py
src/ai_drawing_analyzer/processing/: __init__.py  dwg.py  ifc.py  pdf.py
src/ai_drawing_analyzer/utils/: cache.py  config.py  files.py  logging.py
tests/: __init__.py  conftest.py  test_config.py  test_dwg_processing.py  test_ifc_processing.py  test_pdf_processing.py
tests/test_clients/: __init__.py  test_factory.py
