[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-drawing-analyzer"
version = "2.2.0"
description = "A command-line tool that leverages Vision-Language Models (VLMs) to perform high-quality OCR and analysis on PDF documents"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mohandshamada"}
]
requires-python = ">=3.9"

# Core dependencies (always required)
dependencies = [
    "httpx==0.27.2",
    "pymupdf==1.24.13",
    "Pillow==11.0.0",
    "google-auth==2.36.0",
    "google-auth-httplib2==0.2.0",
    "sentencepiece==0.2.0",
    "numpy==1.26.4",
    "tenacity>=8.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.scripts]
ai-drawing-analyzer = "ai_drawing_analyzer.cli:main"

# Optional dependencies
[project.optional-dependencies]
local = [
    "transformers==4.47.1",
    "torch==2.5.1",
    "timm==0.9.16",
    "einops==0.8.0",
]

minimal = []

full = [
    "transformers==4.47.1",
    "torch==2.5.1",
    "timm==0.9.16",
    "einops==0.8.0",
]



