[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-drawing-analyzer"
version = "2.2.0"
description = "A command-line tool that leverages Vision-Language Models (VLMs) to perform high-quality OCR and analysis on PDF documents"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mohandshamada"}
]
requires-python = ">=3.9"

# Core dependencies (always required)
dependencies = [
    "httpx==0.27.2",
    "pymupdf==1.24.13",
    "Pillow==11.0.0",
    "google-auth==2.36.0",
    "google-auth-httplib2==0.2.0",
    "numpy==1.26.4",
    "tenacity>=8.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.scripts]
ai-drawing-analyzer = "ai_drawing_analyzer.cli:main"
ai-drawing-analyzer-gui = "ai_drawing_analyzer.gui:main"

# Optional dependencies
[project.optional-dependencies]
gui = [
    "gradio>=4.0.0",
]

local = [
    "transformers==4.47.1",
    "torch>=2.6.0",
    "timm==0.9.16",
    "einops==0.8.0",
    "accelerate>=0.26.0",
]

minimal = []

full = [
    "transformers==4.47.1",
    "torch>=2.6.0",
    "timm==0.9.16",
    "einops==0.8.0",
    "accelerate>=0.26.0",
    "gradio>=4.0.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src/ai_drawing_analyzer --cov-report=term-missing"

